# keso

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config
docs/: context-switch.md
res/: debug.gdb  debugrunning.gdb
src/: main.rs
src/app/: mod.rs
src/app/mcal/: mod.rs
src/app/mcal/clocks/: defs.rs  mod.rs
src/app/mcal/cm0p/: defs.rs  mod.rs
src/app/mcal/intrinsics/: mod.rs
src/app/mcal/iobank0/: defs.rs  mod.rs
src/app/mcal/padsbank0/: defs.rs  mod.rs
src/app/mcal/pll/: defs.rs  mod.rs
src/app/mcal/resets/: defs.rs  mod.rs
src/app/mcal/sio/: defs.rs  mod.rs
src/app/mcal/timer/: defs.rs  mod.rs
src/app/mcal/uart/: defs.rs  mod.rs
src/app/mcal/watchdog/: defs.rs  mod.rs
src/app/mcal/xosc/: defs.rs  mod.rs
src/app/tasks/: mod.rs
srcaux/: asm.s  memory.ld
tools/: cdef2rust.py  elf2uf2
